   Version 0.42
   Version 0.41
   Version 0.40
   Version 0.39
   Version 0.38
   Version 0.37
   Version 0.36
   Version 0.35

-----------------------------------------------------------------------
 Version 0.57
 ============

 Released on 
  
 New features and improvements:

   - GuidedInputBin: row number is italic (todo #1109).
   - GuidedInputBin: review account column width (todo #1108).
   - Miscellaneous menu: have an option to display the collector content (todo #562).
   - Miscellaneous menu: have an option to display the audit trace (todo #732).
   - myICollector: cleanup the stores at end.
   - OpeTemplateProperties: account tooltip is account label (todo #1105).
   - OpeTemplateProperties: review account column width (todo #1108).
   - TVAForm: label is now mandatory.
   - TVAStyle: style the VAT declarations.
   - Review (re-check+setup) all integrity constraints. 
 
 Bug fixes:

   - AccountsChart: fix reordering of children of a renumbered account (todo #1104).
   - AccountSelect, OpeTemplateSelect: fix hub finalization (todo #1106). 
   - FormulaEngine: fix nested parenthese evaluation (todo #1107).
   - IExportable/IImportable types: have BAT files at end of the list (todo #1125).
   - Periodicity: fix 31 day label (todo #1118).

 Other changes:

   - ofa_account_frame_bin_get_account_store(): new method.
   - ofa_ope_template_frame_bin_get_ope_template_store(): new method.
   - myIWindow::hide_on_close: removed property (todo #1111).

-----------------------------------------------------------------------
 Version 0.56
 ============

 Released on 2016-05-01
  
 New features and improvements:

   - Main notebook's pages are now detachable (todo #668), and re-attachable.
   - ofaDossierOpen: open in read-only mode (todo #701).
   - ofaFormulaEngine: accepts a variable count of arguments.
   - ofaTVARecordProperties: set the auto-eval mode to True.
   - ofsOpe: set again the auto-eval mode to False, only using %EVAL() function.